<resources>
    <string name="app_name">My</string>
    <string name="update_to_actual_data">Update to actual data</string>


    <!--Errors-->
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data, please try again!</string>
    <string name="error">Error</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">Post</string>

    <string name="take_photo">Take Photo</string>

    <string name="cannot_take_photo_without_permission">Cannot take photo without permission.</string>
    <string name="allow_permission_to_access_the_camera">Allow permission to access the camera?</string>

    <!--fragment_post_description-->
    <string name="fragment_post_description_publish_post">Publish post</string>

    <!--bottom_sheet-->
    <string name="bottom_sheet_select_folder">Select folder</string>

    <!--fragment_shoose_image-->
    <string name="fragment_shoose_image_please_choose_photo">Please choose photo</string>
    <string name="take_picture">Take picture</string>
    <string name="title_choose">Choose</string>

</resources>
